--- a/src/resources/scss/common/_app.scss
+++ b/src/resources/scss/common/_app.scss
@@ -4,4 +4,10 @@
   height: 565px;
   margin: 0 auto;
   padding: 12px;
+
+  h2 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
